Added get all products API for 3rd Party