@@ -3,26 +3,39 @@ package com.example.productservice.service;
 import com.example.productservice.dto.FakeStoreProductDTO;
 import com.example.productservice.models.Category;
 import com.example.productservice.models.Product;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+
 @Service
-public class FakeStoreProductService implements ProductService{
+public class FakeStoreProductService implements ProductService {
+
+  private final RestTemplate restTemplate;
+
+  public FakeStoreProductService(RestTemplate restTemplate) {
+    this.restTemplate = restTemplate;
+  }
 
 
   @Override
   public Product getProduct(Long id) {
     RestTemplate restTemplate = new RestTemplate();
-    FakeStoreProductDTO fakeStoreProductDTO=restTemplate.getForObject(
-        "https://fakestoreapi.com/products/"+id,
-        FakeStoreProductDTO.class);
+    FakeStoreProductDTO fakeStoreProductDTO = restTemplate.getForObject(
+        "https://fakestoreapi.com/products/" + id, FakeStoreProductDTO.class);
     return convertFakeStroreProductDTOtoProduct(fakeStoreProductDTO);
 
   }
 
   @Override
   public List<Product> getAllProducts() {
-    return List.of();
+    FakeStoreProductDTO[] fakeStoreProductDTOS = restTemplate.getForObject(
+        "https://fakestoreapi.com/products", FakeStoreProductDTO[].class);
+    List<Product> productList = Arrays.asList(fakeStoreProductDTOS).stream()
+        .map(x -> convertFakeStroreProductDTOtoProduct(x)).collect(Collectors.toList());
+    return productList;
+
   }
 
   @Override
@@ -46,7 +59,7 @@ public class FakeStoreProductService implements ProductService{
   }
 
   private Product convertFakeStroreProductDTOtoProduct(FakeStoreProductDTO fakeStoreProductDTO) {
-    Product product=new Product();
+    Product product = new Product();
     product.setId(fakeStoreProductDTO.getId());
     product.setTitle(fakeStoreProductDTO.getTitle());
     product.setPrice(fakeStoreProductDTO.getPrice());
